--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   	<head>
   		<!-- https://github.com/merttasci -->
 	    <meta charset="utf-8">
-	    <title>CSRF Simple PoC Generator</title>
+	    <title>CSRF Simple PoC Generatorm</title>
 	    <link href='https://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	    <link href="css/bootstrap.min.css" rel="stylesheet">
 	    <link href="css/style.css" rel="stylesheet">
