--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 				<label class="radio-inline">
 					<input type="radio"  id="httpsradio" name="protocol">HTTPS
 				</label>
+				<label class="radio-inline">
+					<input type="radio"  id="checkauto" name="dontUseAutoSubmit">Without Auto Submit
+				</label>
 			
 		</div>
 	    <script src="js/generate.js"></script>
