--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="container-fluid">
-			<div class="new-container-fluid">
+		<div class="container-fluid new-container-fluid">
+			
 				<label class="radio-inline" >
 					<input type="radio" id="httpradio" name="protocol">HTTP
 				</label>
@@ -72,7 +72,7 @@
 				<label class="radio-inline">
 					<input type="radio"  id="checkauto" name="dontUseAutoSubmit">Without Auto Submit
 				</label>
-			</div>
+			
 		</div>
 	    <script src="js/generate.js"></script>
   	</body>
