--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="container-fluid new-container-fluid">
+		<div class="container-fluid" id="new-container-fluid">
 			
 				<label class="radio-inline" >
 					<input type="radio" id="httpradio" name="protocol">HTTP
