--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 					</div>
 				</div>
 			</div>
-			</div>
 			<div class="row">
 				<div class="col-md-6">
 					<div class="panel panel-default">
@@ -61,7 +60,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="container-fluid">
+		<div class="container-fluid new-container-fluid">
 		
 				<label class="radio-inline" >
 					<input type="radio" id="httpradio" name="protocol">HTTP
