--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
 							</h3>
 						</div>
 						<div class="panel-body" style="padding:0">
-							<textarea style="border:none; background-color: white; padding:10px; width:100%; height:400px" placeholder="PoC will be here." id="poc"></textarea>
+							<textarea style="border:none; background-color: white; padding:10px; width:100%; height:400px" placeholder="PoC will be here." id="poc" spellcheck="false" oninput="update(this.value); sync_scroll(this);" onscroll="sync_scroll(this);" onkeydown="check_tab(this, event);"></textarea>
+							<!--my test-->
+							<pre id="highlighting" aria-hidden="true">
+							<code class="language-html" id="highlighting-content">
+							&lt;span title=&quot;Start Typing&quot;&gt;Just start typing!&lt;/span&gt;
+							</code>
+							</pre>
+
 						</div>
 						<div class="panel-footer">
 							<button type="button" class="btn btn-success" id="copy" data-clipboard-target="#poc">Copy It</button>
@@ -81,5 +88,40 @@
 			
 		</div>
 	    <script src="js/generate.js"></script>
+		<script>function update(text) {
+  let result_element = document.querySelector("#highlighting-content");
+  // Handle final newlines (see article)
+  if(text[text.length-1] == "\n") {
+    text += " ";
+  }
+  // Update code
+  result_element.innerHTML = text.replace(new RegExp("&", "g"), "&amp;").replace(new RegExp("<", "g"), "&lt;"); /* Global RegExp */
+  // Syntax Highlight
+  Prism.highlightElement(result_element);
+}
+
+function sync_scroll(element) {
+  /* Scroll result to scroll coords of event - sync with textarea */
+  let result_element = document.querySelector("#highlighting");
+  // Get and set x and y
+  result_element.scrollTop = element.scrollTop;
+  result_element.scrollLeft = element.scrollLeft;
+}
+
+function check_tab(element, event) {
+  let code = element.value;
+  if(event.key == "Tab") {
+    /* Tab key pressed */
+    event.preventDefault(); // stop normal
+    let before_tab = code.slice(0, element.selectionStart); // text before tab
+    let after_tab = code.slice(element.selectionEnd, element.value.length); // text after tab
+    let cursor_pos = element.selectionStart + 1; // where cursor moves after tab - moving forward by 1 char to after tab
+    element.value = before_tab + "\t" + after_tab; // add tab char
+    // move cursor
+    element.selectionStart = cursor_pos;
+    element.selectionEnd = cursor_pos;
+    update(element.value); // Update text to include indent
+  }
+}</script>
   	</body>
 </html>
