--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 			
 		</div>
 	    <script src="js/generate.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
 		<script>
 			const inputEl = document.querySelector('[data-el="input"]');
 			const highlightEl = document.querySelector('[data-el="highlight"]');
