--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 		</div>
 	    <script src="js/generate.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
 		<script>
 			const inputEl = document.querySelector('[data-el="input"]');
 			const highlightEl = document.querySelector('[data-el="highlight"]');
