--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
 							<textarea style="border:none; background-color: white; padding:10px; width:100%; height:400px" placeholder="PoC will be here." id="poc" spellcheck="false" oninput="update(this.value); sync_scroll(this);" onscroll="sync_scroll(this);" onkeydown="check_tab(this, event);"></textarea>
 							<!--my test-->
 							<pre id="highlighting" aria-hidden="true">
-							<code class="language-html" id="highlighting-content">
-							&lt;span title=&quot;Start Typing&quot;&gt;Just start typing!&lt;/span&gt;
-							</code>
+							<code class="language-html" id="highlighting-content">&lt;span title=&quot;Start Typing&quot;&gt;Just start typing!&lt;/span&gt;</code>
 							</pre>
 
 						</div>
