--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		</div>
 	    <script src="js/generate.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/prism.min.js"></script>
-		<script>w3CodeColor(document.getElementById("myDiv"));
+		<script>w3CodeColor(document.getElementById("highlighting-content"));
 
 function w3CodeColor(elmnt, mode) {
   var lang = (mode || "html");
