--- a/index.html
+++ b/index.html
@@ -75,8 +75,12 @@
 				<label class="radio-inline">
 					<input type="radio"  id="httpsradio" name="protocol">HTTPS
 				</label>
-				<label class="radio-inline">
+				<!--<label class="radio-inline">
 					<input type="radio"  id="checkauto" name="dontUseAutoSubmit">Without Auto Submit
+				</label>-->
+				<label class="radio-inline">Auto Save
+					<input type="radio"  id="checkauto" name="dontUseAutoSubmit">On
+					<input type="radio"  id="checkauto" name="dontUseAutoSubmit">OFF
 				</label>
 			
 		</div>
