--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
 				<!--<label class="radio-inline">
 					<input type="radio"  id="checkauto" name="dontUseAutoSubmit">Without Auto Submit
 				</label>-->
-				<label class="radio-inline">Auto Save
+				<label class="radio-inline">Auto Save:
 					<input type="radio"  id="checkauto" name="dontUseAutoSubmit">On
-					<input type="radio"  id="checkauto" name="dontUseAutoSubmit">OFF
+				</label>
+				<label class="radio-inline">
+					<input type="radio"  id="checkauto" name="dontUseAutoSubmit">Off
 				</label>
 			
 		</div>
