--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 				<!--<label class="radio-inline">
 					<input type="radio"  id="checkauto" name="dontUseAutoSubmit">Without Auto Submit
 				</label>-->
-				<label class="radio-inline">Auto Save:
+				<p>Auto Submit:</p>
+				<label class="radio-inline">
 					<input type="radio"  id="checkauto" name="dontUseAutoSubmit">On
 				</label>
 				<label class="radio-inline">
