--- a/index.html
+++ b/index.html
@@ -75,15 +75,12 @@
 				<label class="radio-inline">
 					<input type="radio"  id="httpsradio" name="protocol">HTTPS
 				</label>
-				<!--<label class="radio-inline">
-					<input type="radio"  id="checkauto" name="dontUseAutoSubmit">Without Auto Submit
-				</label>-->
 				<p>Auto Submit:</p>
 				<label class="radio-inline">
-					<input type="radio"  id="checkauto" name="dontUseAutoSubmit">On
+					<input type="radio"  id="checkauto-1" name="dontUseAutoSubmit">On
 				</label>
 				<label class="radio-inline">
-					<input type="radio"  id="checkauto" name="dontUseAutoSubmit">Off
+					<input type="radio"  id="checkauto-2" name="dontUseAutoSubmit">Off
 				</label>
 			
 		</div>
