--- a/index.html
+++ b/index.html
@@ -68,13 +68,16 @@
 			</div>
 		</div>
 		<div class="container-fluid new-container-fluid">
-		
+			<div>
+				<p>Protocol:</p>
 				<label class="radio-inline" >
 					<input type="radio" id="httpradio" name="protocol">HTTP
 				</label>
 				<label class="radio-inline">
 					<input type="radio"  id="httpsradio" name="protocol">HTTPS
 				</label>
+			</div>
+			<div>
 				<p>Auto Submit:</p>
 				<label class="radio-inline">
 					<input type="radio"  id="checkauto-1" name="dontUseAutoSubmit">On
@@ -82,6 +85,7 @@
 				<label class="radio-inline">
 					<input type="radio"  id="checkauto-2" name="dontUseAutoSubmit">Off
 				</label>
+			</div>
 			
 		</div>
 	    <script src="js/generate.js"></script>
