--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 			</div>
 		</div>
 		<div class="container-fluid new-container-fluid">
-			<div>
-				<p>Protocol:</p>
+			<div class="radioBorder">
+				<b>Protocol:</b>
 				<label class="radio-inline" >
 					<input type="radio" id="httpradio" name="protocol">HTTP
 				</label>
@@ -77,8 +77,8 @@
 					<input type="radio"  id="httpsradio" name="protocol">HTTPS
 				</label>
 			</div>
-			<div>
-				<p>Auto Submit:</p>
+			<div class="radioBorder">
+				<b>Auto Submit:</b>
 				<label class="radio-inline">
 					<input type="radio"  id="checkauto-1" name="dontUseAutoSubmit">On
 				</label>
