--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		</div>
 		<div class="container-fluid new-container-fluid">
 			<div class="radioBorder">
-				<b>Protocol (optional):-</b>
+				<b>Protocol:-</b>
 				<label class="radio-inline" >
 					<input type="radio" id="httpradio" name="protocol">HTTP
 				</label>
@@ -78,7 +78,7 @@
 				</label>
 			</div>
 			<div class="radioBorder">
-				<b>Auto Submit (optional):-</b>
+				<b>Auto Submit:-</b>
 				<label class="radio-inline">
 					<input type="radio"  id="checkauto-1" name="dontUseAutoSubmit">On
 				</label>
