--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 						<h1>
 							CSRF PoC Generator <small>to save your time..</small>
 						</h1>
-						<span class="socialConnect">
+						<div class="socialConnect">
 							<a href="https://twitter.com/Infos3cNET" target="_blank">Twitter</a>
-						</span>
+						</div>
 					</div>
 				</div>
 			</div>
