--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							CSRF PoC Generator <small>to save your time..</small>
 						</h1>
 						<div class="socialConnect">
-							<a href="https://twitter.com/Infos3cNET" target="_blank">Twitter</a>
+							<a href="https://twitter.com/Infos3cNET" target="_blank" style="color:#0041de;">Twitter</a>
 						</div>
 					</div>
 				</div>
