--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
 				<div class="col-md-12">
 					<div class="page-header">
 						<h1>
-							CSRF PoC Generator <small>to save your time..</small>
+							CSRF PoC Generator 
+							<small>to save your time..
+								<span class="socialConnect">
+									<a href="https://twitter.com/Infos3cNET" target="_blank" style="color:#0041de;">Twitter</a>
+								</span>
+							</small>
 						</h1>
-						<div class="socialConnect">
-							<a href="https://twitter.com/Infos3cNET" target="_blank" style="color:#0041de;">Twitter</a>
-						</div>
 					</div>
 				</div>
 			</div>
