--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   		<!-- https://github.com/merttasci -->
 	    <meta charset="utf-8">
 	    <title>CSRF Simple PoC Generator</title>
+	    <meta property="twitter:card" content="summary_large_image"/>
+	    <meta property="twitter:title" content="CSRF PoC Generator Online | A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec"/>
+            <meta property="twitter:description" content="A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec"/>
+	    <meta property="twitter:image" content="https://csrf.infos3c.net/imgs/csrf.png"/>
 	    <link href='https://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	    <link href="css/bootstrap.min.css" rel="stylesheet">
 	    <link href="css/style.css" rel="stylesheet">
