--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   	<head>
-  		<!-- https://github.com/merttasci -->
 	    <meta charset="utf-8">
 	    <title>CSRF Simple PoC Generator</title>
+	    <meta name="description" content="A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec.">
+	    <!-- Social: Twitter -->
 	    <meta property="twitter:card" content="summary_large_image"/>
-	    <meta property="twitter:title" content="CSRF PoC Generator Online | A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec"/>
-            <meta property="twitter:description" content="A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec"/>
+	    <meta property="twitter:title" content="CSRF PoC Generator Online | A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec."/>
+            <meta property="twitter:description" content="A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec."/>
 	    <meta property="twitter:image" content="https://csrf.infos3c.net/imgs/csrf.png"/>
+	    <meta name="twitter:site" content="@Infos3cNET">
+	    <!-- Social: Facebook / Open Graph -->
+	    <meta property="og:url" content="https://csrf.infos3c.net/">
+            <meta property="og:title" content="CSRF PoC Generator Online | A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec.">
+	    <meta property="og:image" content="https://watch.infos3c.net/assets/img/blog-image.png">
+	    <meta property="og:description" content="A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec.">
+	    <meta property="og:site_name" content="CSRF PoC Generator Online">
 	    <link href='https://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	    <link href="css/bootstrap.min.css" rel="stylesheet">
 	    <link href="css/style.css" rel="stylesheet">
