--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	    <!-- Social: Facebook / Open Graph -->
 	    <meta property="og:url" content="https://csrf.infos3c.net/">
             <meta property="og:title" content="CSRF PoC Generator Online | A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec.">
-	    <meta property="og:image" content="https://watch.infos3c.net/assets/img/blog-image.png">
+	    <meta property="og:image" content="https://csrf.infos3c.net/imgs/csrf.png">
 	    <meta property="og:description" content="A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec.">
 	    <meta property="og:site_name" content="CSRF PoC Generator Online">
 	    <link href='https://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
