--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   	<head>
 	    <meta charset="utf-8">
-	    <title>CSRF Simple PoC Generator</title>
+	    <title>CSRF PoC Generator Online</title>
 	    <meta name="description" content="A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec.">
 	    <!-- Social: Twitter -->
 	    <meta property="twitter:card" content="summary_large_image"/>
