--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
   	<head>
 	    <meta charset="utf-8">
-	    <title>CSRF PoC Generator Online</title>
-	    <meta name="description" content="A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec.">
+	    <title>CSRF PoC Generator Online | A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request. This function can be used to generate a proof-of-concept (PoC) cross-site request forgery (CSRF) attack for a given request - Read & Watch InfoSec.</title>
+	    <meta name="description" content="A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request. This function can be used to generate a proof-of-concept (PoC) cross-site request forgery (CSRF) attack for a given request - Read & Watch InfoSec.">
 	    <!-- Social: Twitter -->
 	    <meta property="twitter:card" content="summary_large_image"/>
-	    <meta property="twitter:title" content="CSRF PoC Generator Online | A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec."/>
-            <meta property="twitter:description" content="A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec."/>
+	    <meta property="twitter:title" content="CSRF PoC Generator Online | A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request. This function can be used to generate a proof-of-concept (PoC) cross-site request forgery (CSRF) attack for a given request - Read & Watch InfoSec."/>
+            <meta property="twitter:description" content="A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request. This function can be used to generate a proof-of-concept (PoC) cross-site request forgery (CSRF) attack for a given request - Read & Watch InfoSec."/>
 	    <meta property="twitter:image" content="https://csrf.infos3c.net/imgs/csrf.png"/>
 	    <meta name="twitter:site" content="@Infos3cNET">
 	    <!-- Social: Facebook / Open Graph -->
 	    <meta property="og:url" content="https://csrf.infos3c.net/">
-            <meta property="og:title" content="CSRF PoC Generator Online | A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec.">
+            <meta property="og:title" content="CSRF PoC Generator Online | A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request. This function can be used to generate a proof-of-concept (PoC) cross-site request forgery (CSRF) attack for a given request - Read & Watch InfoSec.">
 	    <meta property="og:image" content="https://csrf.infos3c.net/imgs/csrf.png">
-	    <meta property="og:description" content="A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request - Read & Watch InfoSec.">
+	    <meta property="og:description" content="A simple online CSRF PoC generator tool that creates a CSRF PoC form to any HTTP request. This function can be used to generate a proof-of-concept (PoC) cross-site request forgery (CSRF) attack for a given request - Read & Watch InfoSec.">
 	    <meta property="og:site_name" content="CSRF PoC Generator Online">
 	    <link href='https://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	    <link href="css/bootstrap.min.css" rel="stylesheet">
