--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 						<input type="radio" id="httpradio" name="protocol">HTTP
 					</label>
 					<label class="radio-inline">
-						<input type="radio"  id="httpsradio" name="protocol">HTTPS
+						<input type="radio"  id="httpsradio" name="protocol" checked>HTTPS
 					</label>
 				</div>
 				<div class="radioBorder">
 					<b>Auto Submit:-</b>
 					<label class="radio-inline">
-						<input type="radio"  id="checkauto-1" name="dontUseAutoSubmit">On
+						<input type="radio"  id="checkauto-1" name="dontUseAutoSubmit" checked>On
 					</label>
 					<label class="radio-inline">
 						<input type="radio"  id="checkauto-2" name="dontUseAutoSubmit">Off
